[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=1]
[ext_resource path="res://assets/TTC_settings_button.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/TTC_about_button.png" type="Texture" id=5]
[ext_resource path="res://navigation/games/games2.gd" type="Script" id=6]
[ext_resource path="res://navigation/games/Paper.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="Games2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Settings" type="TextureRect" parent="Bg"]
anchor_left = 0.514815
anchor_top = 0.040625
anchor_right = 0.909259
anchor_bottom = 0.163021
margin_bottom = 1.52588e-05
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Info" type="TextureRect" parent="Bg"]
anchor_left = 0.115741
anchor_top = 0.0390625
anchor_right = 0.510185
anchor_bottom = 0.163021
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PaperLike" type="TextureRect" parent="Bg"]
anchor_left = -0.00925926
anchor_top = 0.178646
anchor_right = 0.990741
anchor_bottom = 0.304167
margin_left = 120.0
margin_right = -120.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/PaperLike"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0
margin_bottom = -70.0
alignment = 1

[node name="VSeparator" type="VSeparator" parent="Bg/PaperLike/HBoxContainer"]
visible = false
margin_right = 50.0
margin_bottom = 101.0
rect_min_size = Vector2( 50, 0 )

[node name="GameCode" type="LineEdit" parent="Bg/PaperLike/HBoxContainer"]
margin_left = 61.0
margin_right = 391.0
margin_bottom = 101.0
rect_min_size = Vector2( 330, 0 )
custom_fonts/font = SubResource( 1 )
placeholder_text = "PLACEHOLDER"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator2" type="VSeparator" parent="Bg/PaperLike/HBoxContainer"]
margin_left = 395.0
margin_right = 445.0
margin_bottom = 101.0
rect_min_size = Vector2( 50, 0 )
custom_styles/separator = SubResource( 3 )

[node name="Button" type="Button" parent="Bg/PaperLike/HBoxContainer"]
margin_left = 449.0
margin_right = 779.0
margin_bottom = 101.0
rect_min_size = Vector2( 330, 0 )
custom_fonts/font = SubResource( 2 )
text = "DOWN-PLAY"

[node name="VSeparator3" type="VSeparator" parent="Bg/PaperLike/HBoxContainer"]
visible = false
margin_left = 765.0
margin_right = 815.0
margin_bottom = 101.0
rect_min_size = Vector2( 50, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="Bg"]
anchor_left = 0.0962963
anchor_top = 0.296354
anchor_right = 0.905556
anchor_bottom = 0.979688
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Bg/ScrollContainer"]
custom_constants/separation = 250

[connection signal="gui_input" from="Bg/Settings" to="." method="_on_Settings_gui_input"]
[connection signal="gui_input" from="Bg/Info" to="." method="_on_Info_gui_input"]
[connection signal="pressed" from="Bg/PaperLike/HBoxContainer/Button" to="." method="_on_Button_pressed"]
